# DebugNativeCode

app/: build.gradle
app/src/androidTest/java/com/hua/debugnativecode/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ExampleService.cpp  add.cpp  native-lib.cpp
app/src/main/cpp/android_kernel/: binder.c
app/src/main/cpp/android_kernel/include/linux/: wait.h
app/src/main/cpp/binder/: IPCThreadState.cpp
app/src/main/cpp/include/log/: log.h
app/src/main/cpp/smgr/: binder.c  binder.h
app/src/main/java/com/hua/debugnativecode/: MainActivity.java  Rectangle.java  Shape.java  Triangle.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/hua/debugnativecode/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
